--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Ćwiczenie m11</title>
+    <title>My Little Kanban</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 
     <main class="container">
-      <div class="row">
-        <div class="col">Phone</div>
-        <div class="col">Galaxy 6S</div>
-        <div class="col">iPhone 6s</div>
-        <div class="col">iPhone 6s plus</div>
-        <div class="col">OnePlus One</div>
-      </div>
+        <button class="create-board">Add a board</button>
     </main>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="scripts.js"></script>
   </body>
 </html>
