--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
   <body>
 
     <main class="container">
-        <button class="create-board">Add a board</button>
+        <div id="board" class="board">
+          <h1 class="board-title">Kanban board</h1>
+          <button class="create-column">Add a column</button>
+          <div class="column-container"></div>
+        </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="js/App.js"></script>
+    <script type="text/javascript" src="js/Board.js"></script>
+    <script type="text/javascript" src="js/Card.js"></script>
+    <script type="text/javascript" src="js/Column.js"></script>
   </body>
 </html>
